# FromZero

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
LibDS/: StaticArray.cpp  StaticArray.h  StaticArray.spec.h
include/: Array.cpp  Array.h  CMakeLists.txt
src/: CMakeLists.txt  Makefile  main.cpp
